fixed line height for accent aigu above the E and moved line down for better spacing

--- a/views/ftu/index.less
+++ b/views/ftu/index.less
@@ -12,7 +12,7 @@
         padding: 20px;
         margin: 0;
         font-size: 110px;
-        line-height: 105px;
+        line-height: 115px;
         text-transform: uppercase;
 
         > span {
@@ -25,7 +25,7 @@
         position: absolute;
         width: 90%;
         height: 10px;
-        top: 430px;
+        top: 480px;
         margin-left: 5%;
 
         background-color: @white;
